fixed searchbar shifted search button

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -287,6 +287,7 @@ $search-wrapper-height: 47px;
 
 .search-wrapper {
   border-radius: 8px;
+  display: flex;
 }
 
 .search-balance, .search-column {
